--- a/mysite/news/templates/news/category.html
+++ b/mysite/news/templates/news/category.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
-    <title>{{ title }}</title>
+    <title>{{ category.title }}</title>
   </head>
   <body>
 
@@ -27,8 +27,7 @@
 </nav>
 
   <div class="container mt-3">
-    <h1>{{ title }}</h1>
-    <div class="row">
+      <div class="row">
 
       <div class="col-md-4">
         <div class="list-group">
@@ -77,36 +76,6 @@
 
   </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
