--- a/mysite/news/templates/news/index.html
+++ b/mysite/news/templates/news/index.html
@@ -7,18 +7,11 @@
 
 <!-- Переопределение блоков content и sitebar  для конкретной страницы-->
 {% block sitebar %}
-      <div class="col-md-4">
-        <div class="list-group">
-           {% for item in categories %}
-          <a href="{% url 'category' item.pk %}" class="list-group-item list-group-item-action">{{ item.title }}</a>
-          {% endfor %}
-        </div>
-      </div>
-
+{% include 'inc/_sitebar.html' %}    <!-- Подключение списка категорий-->
 {% endblock %}
 
 {% block content %}
-      <div class="col-md-8">
+
       {% for item in news %}
 
       <div class="card mb-3">
@@ -45,7 +38,6 @@
   </div>
       </div>
       {% endfor %}
-      </div>
 
 {% endblock %}
 <!-- конец переопределения-->
