--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -18,10 +18,12 @@
   <div class="container mt-3">
     <h1>{{ title }}</h1>
     <div class="row">
-
+      <div class="col-md-4">
       {% block sitebar %} SITEBAR {% endblock %}     <!-- Значения по умолчанию-->
+      </div>
+      <div class="col-md-8">
       {% block content %} CONTENT {% endblock %}     <!-- Значения по умолчанию-->
-
+      </div>
     </div>
   </div>
 
