--- a/mysite/templates/inc/_sitebar.html
+++ b/mysite/templates/inc/_sitebar.html
@@ -1,7 +1,7 @@
 
  {% load news_tags %}              <!-- Подключение news_tags -->
 
-
+ {% comment %}
         <div class="list-group">
             {% get_categories as categories %}
            {% for item in categories %}
@@ -10,5 +10,5 @@
         </div>
 
  <br>
-
+ {% endcomment %}
  {% show_categories %}
